# chemssh

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  config.yaml  create-release-archive.sh  package.json  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  cli.py  dependencies.py  main.py
backend/app/api/: __init__.py  client_cache.py  files.py  jobs.py  plugins.py  queue.py  structures.py  system.py  terminal.py
backend/app/core/: __init__.py  config.py  errors.py  paths.py  security.py
backend/app/middleware/: brotli.py  idle_shutdown.py  token_auth.py
backend/app/models/: file.py  job.py  queue.py  structure.py  system.py  terminal.py
backend/app/providers/: __init__.py
backend/app/services/: client_cache_service.py  file_service.py  file_types.py  job_service.py  plugin_service.py  queue_service.py  structure_service.py  terminal_service.py
docs/: API.md  PLUGIN_DEVELOPMENT.md  RELEASE.md
frontend/: components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  i18n.ts  main.ts  styles-liquid-glass.css  styles.css
frontend/src/api/: apiMessages.ts  clientCache.ts  clientPreferences.ts  clientSession.ts  fileDrag.ts  fileMove.ts  (+15 more)
frontend/tests/: workspaceScope.test.ts
plugins/cclib/: .chemssh-plugin-state.json  README.md  chemweb-plugin.json
tests/: test-xterm-dom.html  test_api.py  test_ase_structures.py  test_cli.py  test_cli_performance.py  test_client_cache.py  test_config.py  test_file_types.py  test_idle_shutdown.py  test_security.py  test_terminal.py  test_terminal_transfer.py
(+51 files in other folders)
